# fire-and-sword

./: .gitignore  Cargo.toml  flake.nix  justfile  manifest.json  shaders.spv
assets/: example-gltf.json  test-map-1.glb
crates/fire-and-sword/: Cargo.toml
crates/fire-and-sword/src/: game.rs  main.rs  run.rs  utils.rs
crates/fire-and-sword/src/run/: config.rs  rendering.rs  window.rs
crates/fire-and-sword/src/run/rendering/: camera.rs  identify.rs  instance.rs  light_source.rs  model.rs  render_pass.rs  scene.rs  texture.rs  wgpu_ext.rs
crates/fire-and-sword/src/run/rendering/model/: load_gltf.rs  load_obj.rs  material.rs  mesh.rs
crates/fire-and-sword/src/run/rendering/render_pass/: model.rs  node.rs  primitive.rs
crates/fire-and-sword/src/run/rendering/wgpu_ext/: bind_group.rs  buffer.rs  device.rs
crates/fire-and-sword/src/run/rendering/wgpu_ext/buffer/: buffer_ext.rs  index.rs  storage.rs  uniform.rs
crates/shader-types/: Cargo.toml
crates/shader-types/src/: lib.rs  model.rs  padding.rs
crates/shaders/: Cargo.toml  manifest.json
crates/shaders/src/: lib.rs  lighting.rs
src/: main.rs  run.rs
