[workspace]
default-members = ["crates/fire-and-sword"]
members = ["crates/fire-and-sword"]

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/fire-and-sword"
categories = ["wasm"]
# readme = "README.md"
edition = "2024"


[workspace.dependencies]
fire-and-sword.path = "crates/fire-and-sword"
