[workspace]
resolver = "3"
default-members = ["crates/fire-and-sword"]
members = ["crates/fire-and-sword"]

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/fire-and-sword"
categories = ["wasm"]
# readme = "README.md"
edition = "2024"


[workspace.dependencies]
fire-and-sword.path = "crates/fire-and-sword"
anyhow = { version = "1.0" }
clap = { version = "4.5.32", features = ["derive", "cargo", "env"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
itertools = { version = "0.14.0" }
tap = { version = "1.0" }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = { version = "24.0" }
winit = { git = "https://github.com/rust-windowing/winit", rev = "ae28eea406d16cb991f95eeff2df4278c250f4fe" }
