[package]
name = "fire-and-sword"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
# readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.32", features = ["derive", "cargo", "env"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
tap = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "24.0"
# winit = "0.30"
winit = { git = "https://github.com/rust-windowing/winit", rev = "ae28eea406d16cb991f95eeff2df4278c250f4fe" }
