[package]
name = "fire-and-sword"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
# readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
tap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
shader-types.workspace = true
image = { version = "0.25.5", features = ["png", "jpeg"] }
