[package]
name = "shader-types"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true, features = ["libm", "bytemuck"] }
num-traits = { workspace = true, features = ["libm"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, default-features = true, features = ["bytemuck"] }
num-traits = { workspace = true, default-features = true }

[dependencies]
derive_more = { version = "2", default-features = false, features = ["constructor", "from"] }
bytemuck.workspace = true
tap.workspace = true
