[package]
name = "shaders"
edition = "2021"

[lib]
crate-type = ["dylib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }

[dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu" }
glam = { version = ">=0.22, <=0.29", default-features = false, features = [
  "bytemuck",
] }
shader-types.path = "../shader-types"
bytemuck = "1.22"
